Table caption jumps to the bottom of the table after simplified table relayout https://bugs.webkit.org/show_bug.cgi?id=187903 <rdar://problem/42506245>

Reviewed by Zalan Bujtas.

Source/WebCore:

Test: fast/table/caption-simplified-layout.html

* rendering/RenderTable.cpp:
(WebCore::RenderTable::simplifiedNormalFlowLayout):
Do not call layoutCaptions().

LayoutTests:

* fast/table/caption-simplified-layout-expected.html: Added.
* fast/table/caption-simplified-layout.html: Added.

Canonical link: https://commits.webkit.org/236493@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275931 268f45cc-cd09-0410-ab3c-d52691b4dbfc